# augmentator

./: Cargo.toml  LICENSE  README.md  augmentator.code-workspace  bun.lockb
.github/workflows/: prod.yml  rust.yml
app/: package-lock.json  package.json
app/src/: App.svelte
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: migrated.json
app/src-tauri/src/: main.rs  transformation_factory.rs  transformations.rs
app/src/lib/: Directories.svelte  Jumbotron.svelte  Transformations.svelte
app/src/store/: SeedStore.ts  TransformationsStore.ts
src/: App.svelte  augment.rs  main.rs  main.ts  styles.css  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: augment.rs  file_handler.rs  main.rs  transformation_factory.rs  transformations.rs
src/lib/: Augmentator.svelte  DirectorySettings.svelte  Transformations.svelte  TransformationsPanel.svelte
src/store/: DirectoriesStore.ts  TransformationsStore.ts
