[package]
name = "augmentator"
version = "0.1.2"
description = "A simple app for fast & simple image augmentation"
authors = ["RooTender"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.9"
rand = "0.8.5"
palette = "0.7.5"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rayon = "1.11.0"
num_cpus = "1.17.0"
blake3 = "1.8.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
